apps/qbittorrent/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-nodeport
spec:
  selector:
    app: qbittorrent
  ports:
    - port: 6881
      targetPort: 6881
      nodePort: 31500
      name: inc-tcp
      protocol: TCP
    - port: 6881
      targetPort: 6881
      nodePort: 31500
      name: inc-udp
      protocol: UDP
  type: NodePort
